force-app/main/default/objects/Contact/fields/Num_of_Quiz_Correct_Responses__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Quiz_Correct_Responses__c</fullName>
    <label>Num of Quiz Correct Responses</label>
    <summarizedField>Quiz_Attendee__c.Correct_Responses__c</summarizedField>
    <summaryForeignKey>Quiz_Attendee__c.Player__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>