force-app/main/default/objects/Contact/fields/Num_of_Quiz_Questions_Attended__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Quiz_Questions_Attended__c</fullName>
    <label>Num of Quiz Questions Attended</label>
    <summarizedField>Quiz_Attendee__c.Number_of_Questions__c</summarizedField>
    <summaryForeignKey>Quiz_Attendee__c.Player__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>