force-app/main/default/objects/Contact/fields/Overall_Quiz_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Quiz_Score__c</fullName>
    <formula>Num_of_Quiz_Correct_Responses__c  /  Num_of_Quiz_Questions_Attended__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Quiz Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>